# patasmonkey_ws

./: env_pm.sh
src/patasmonkey_bringup/: package.xml  setup.cfg  setup.py
src/patasmonkey_bringup/launch/: patasmonkey_teleop.launch.py
src/patasmonkey_description/: CMakeLists.txt  package.xml
src/patasmonkey_description/launch/: display.launch.py
src/patasmonkey_description/meshes/: base_link.stl  body.stl  body_left.stl  body_right.stl  wheel_arm.stl  wheel_v1.stl  wheelarm_1_v3.stl  wheelarm_2.stl
src/patasmonkey_description/old/: patasmonkey.urdf
src/patasmonkey_description/old/2/: wheel.stl  wheel_arm.stl
src/patasmonkey_description/rviz/: display.rviz
src/patasmonkey_description/urdf/: patasmonkey.urdf
src/patasmonkey_teleop/config/: teleop_twist_joy.yaml
src/patasmonkey_teleop/launch/: joy_teleop.launch.py
src/patasmonkey_vehicle_interface/: setup.py
src/patasmonkey_vehicle_interface/config/: joint_state_bridge.yaml  vehicle_params.yaml
src/patasmonkey_vehicle_interface/launch/: visualize_test.launch.py  wheel_odometry_test.launch.py
src/patasmonkey_vehicle_interface/patasmonkey_vehicle_interface/: joint_state_bridge_node.py  odrive_controller.py  vehicle_interface_node.py  wheel_odometry_node.py
src/patasmonkey_vehicle_interface/patasmonkey_vehicle_interface/tools/: dummy_jointstate_pub.py
