<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patasmonkey_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for patasmonkey UGV</description>
  <maintainer email="kazuho.kobayashi.ynu@gmail.com">kazuho</maintainer>
  <license>TODO: License declaration</license>

  <!-- 実行時に必要なもの -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 起動対象のノードたち -->
  <exec_depend>patasmonkey_teleop</exec_depend>
  <exec_depend>patasmonkey_vehicle_interface</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
